# ChiliConnectAMP

./: CMakeLists.txt  Chili.json  README.md  main.cpp
model/: CMakeLists.txt  README.md  main.cpp
model/src/: CMakeLists.txt
model/src/yolov5/: yolov5 copy.hpp  yolov5.cpp  yolov5.hpp
src/: CMakeLists.txt  ChiliAPM.cpp  ChiliAPM.hpp
src/ThreadsFlow/: FlowController.hpp
src/Uart/: uart.hpp
src/src/: CMakeLists.txt  ChiliAPM.hpp
src/src/Uart/: uart.hpp
src/src/yolov5/: yolov5.hpp
src/yolov5/: common.hpp  cuda_utils.h  yolov5 copy.hpp  yolov5.hpp
